--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-scikit-learn
-pandas
-numpy
+streamlit
+numpy>=1.21.0
+pandas>=1.3.0
+scikit-learn>=1.0.0
+scipy>=1.7.0
+fuzzywuzzy>=0.18.0
+python-Levenshtein>=0.12.2
